--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>vuex</title>
+    <link rel="stylesheet" href="static/bootstrap.css">
   </head>
   <body>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
